# polyclip

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  NEWS  README.md  appveyor.yml  cleanup  config.status  configure  configure.ac
R/: First.R  clipper.R
man/: pointinpolygon.Rd  polyclip.Rd  polylineoffset.Rd  polyminkowski.Rd  polyoffset.Rd  polysimplify.Rd
src/: Makevars  Makevars.in  Makevars.win  clipper.cpp  clipper.h  init.c  interface.cpp
